--- a/app/src/main/res/layout/fragment_botones_menu.xml
+++ b/app/src/main/res/layout/fragment_botones_menu.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".Botones_menu">
 
 
@@ -31,5 +31,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="@string/eliminar_incidencia" />
+
     </LinearLayout>
 </FrameLayout>
