--- a/app/src/main/res/layout/fragment_ingreso_incidencia.xml
+++ b/app/src/main/res/layout/fragment_ingreso_incidencia.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="164dp"
-            android:text="Button"
+            android:text="@string/guardar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.309"
             app:layout_constraintStart_toStartOf="parent"
