--- a/app/src/main/res/layout/fragment_vista__enfocada.xml
+++ b/app/src/main/res/layout/fragment_vista__enfocada.xml
@@ -7,6 +7,7 @@
     tools:context=".Vista_Enfocada">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/enfocada"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
